Add 1.5.0 features